--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
                     </div>
                     <div class="stat-widget">
                          <span>Status Kernelu:</span>
-                         <span style="color: ${updateNeeded ? 'var(--color-danger-red)' : 'var(--color-accent-green)'};">${updateNeeded ? 'Aktuální' : 'Aktuální'}</span>
+                         <span style="color: ${updateNeeded ? 'var(--color-danger-green)' : 'var(--color-accent-green)'};">${updateNeeded ? 'Aktuální' : 'Aktuální'}</span>
                     </div>
                 </div>
                 
@@ -1393,7 +1393,7 @@
                 "Vyhledávání primárního e-mailu v kompromitovaných databázích...",
                 "Křížová kontrola uložených platebních údajů (tokenizace)...",
                 "Analýza fiktivních datových sad A-92 / B-85...",
-                "Zpracování 95% ověřených zdrojů... (Dokončování)"
+                "Zpracování 100% ověřených zdrojů... (Dokončování)"
             ];
             let msgIndex = 0;
             const messageInterval = SIMULATION_DURATION_LONG / messages.length; // Postupná změna textu
