--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
                     </div>
                     <div class="stat-widget">
                          <span>Status Kernelu:</span>
-                         <span style="color: ${updateNeeded ? 'var(--color-danger-green)' : 'var(--color-accent-green)'};">${updateNeeded ? 'Aktuální' : 'Aktuální'}</span>
+                         <span style="color: ${updateNeeded ? 'var(--color-danger-red)' : 'var(--color-accent-green)'};">${updateNeeded ? 'Zastaralý!' : 'Aktuální'}</span>
                     </div>
                 </div>
                 
